added latest code

--- a/CICD/templates/buildspec-tf-apply.yml
+++ b/CICD/templates/buildspec-tf-apply.yml
@@ -23,9 +23,9 @@ phases:
       - git config --global credential.helper '!aws codecommit credential-helper $@'
       - git config --global credential.UseHttpPath true
       - aws sts get-caller-identity
-      - git clone -b master your-codecommit-repo-url > /dev/null 2>&1
+      - git clone -b master yourcodecommitrepourl > /dev/null 2>&1
       - ls
-      - cd your-repo-folder
+      - cd your repo folder
       - git fetch --tags
       - RPWD=$(pwd)
       - echo $RPWD
@@ -37,16 +37,17 @@ phases:
   pre_build:
     commands:  
       - |
-         if [[ "$latest_tag" == uat* ]]; then
-           ls
-           RPATH="$RPWD/environments/uat"
-           echo "Planning for UAT-Infra!"
-           cd $RPATH
-         elif [[ "$latest_tag" == prod* ]]; then
-           RPATH="$RPWD/environments/prod"
-           echo "Planning for Prod-Infra"
-           cd $RPATH
-         fi
+        if [[ "$latest_tag" == uat* ]]; then
+          ls
+          RPATH="$RPWD/environments/uat"
+          echo "Planning for UAT-Infra!"
+          export CROSS_ACCOUNT_ROLE_ARN=$UAT_ROLE_ARN
+        elif [[ "$latest_tag" == prod* ]]; then
+          RPATH="$RPWD/environments/prod"
+          echo "Planning for PROD-Infra!"
+          export CROSS_ACCOUNT_ROLE_ARN=$PROD_ROLE_ARN
+        fi
+        cd $RPATH
   
   build:
     commands:  
@@ -54,13 +55,13 @@ phases:
       - ls
       - echo $RPATH
       - cd $RPATH
-      - CROSS_ACCOUNT_ROLE=$(aws sts assume-role --role-arn $CROSS_ACCOUNT_ROLE_ARN_DEV --role-session-name my-cross-account-session)
+      - CROSS_ACCOUNT_ROLE=$(aws sts assume-role --role-arn $CROSS_ACCOUNT_ROLE_ARN --role-session-name my-cross-account-session)
       - export CROSS_ACCOUNT_ROLE
       - AWS_ACCESS_KEY_ID="$(echo ${CROSS_ACCOUNT_ROLE} | jq -r '.Credentials.AccessKeyId')"
       - AWS_SECRET_ACCESS_KEY="$(echo ${CROSS_ACCOUNT_ROLE} | jq -r '.Credentials.SecretAccessKey')"
       - AWS_SESSION_TOKEN="$(echo ${CROSS_ACCOUNT_ROLE} | jq -r '.Credentials.SessionToken')"
       - aws sts get-caller-identity
+      - aws s3 ls
       - terragrunt init
       - terragrunt apply
       - ls
-      - aws s3 ls
